test(authorship): re-parsed corpus baseline and sample
The report header names the parser. The sample and its pins are taken from the
corpus re-parsed with name-parser-rust 0.2.2, which the person matcher will be
measured against: 95.9% of same acts compare EQUAL, up from 94.2%, as the whole
class of in citations left the worklist.

Claude-Session: https://claude.ai/code/session_01Wh268z3E46ReEyUwu4uaFg